--- a/src/main.scss
+++ b/src/main.scss
@@ -1,1 +1,11 @@
 @use './scss/base';
+@use './scss/components/header';
+@use './scss/components/navigation';
+@use './scss/components/btn';
+@use './scss/components/phone';
+@use './scss/components/menu';
+@use './scss/components/banner';
+@use './scss/components/special';
+@use './scss/components/connect';
+@use './scss/components/contacts';
+@use './scss/components/footer';
