--- a/src/main.scss
+++ b/src/main.scss
@@ -5,6 +5,7 @@
 @use './scss/components/phone';
 @use './scss/components/menu';
 @use './scss/components/banner';
+@use './scss/components/product';
 @use './scss/components/special';
 @use './scss/components/connect';
 @use './scss/components/contacts';
