--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -1,2 +1,34 @@
-@use '../base/variables';
-@use '../base/extends';
+@use "../base/variables";
+@use "../base/extends";
+
+.navigation {
+    background-color: variables.$grey;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 6px 0;
+
+    &__list {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+        width: 450px;
+
+        @media (max-width: 460px) {
+            width: 80vw;
+            justify-content: center;
+        }
+    }
+
+    &__item {
+        margin: 10px;
+    }
+
+    &__link {
+        @extend %sm-menu-text;
+        @extend %link-hover;
+    }
+}
