--- a/src/scss/components/_special.scss
+++ b/src/scss/components/_special.scss
@@ -1,2 +1,49 @@
 @use '../base/variables';
 @use '../base/extends';
+
+.special {
+    background-color: variables.$grey;
+    padding: 70px 0;
+
+    @media (max-width: 570px) {
+        padding: 40px 0;
+    }
+
+
+    &__header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+
+        @media (max-width: 570px) {
+            justify-content: center;
+        }
+    }
+
+    &__title {
+        @extend %h2-text;
+
+        @media (max-width: 570px) {
+            margin-bottom: 20px;
+        }
+    }
+
+    &__products {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        padding: 5px 0 15px;
+
+        @media (max-width: 570px) {
+            justify-content: center;
+        }
+    }
+
+    &__item {
+        margin-top: 15px;
+    }
+}
