--- a/src/scss/components/_connect.scss
+++ b/src/scss/components/_connect.scss
@@ -1,2 +1,82 @@
-@use '../base/variables';
-@use '../base/extends';
+@use "../base/variables";
+@use "../base/extends";
+@use "../components/banner";
+
+.connect {
+    background-color: variables.$grey;
+    padding-bottom: 130px;
+
+    &__inner {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+
+        @media (max-width: 1142px) {
+            justify-content: center;
+        }
+    }
+
+    &__box {
+        width: 540px;
+        height: 212px;
+        background-color: variables.$green;
+        padding: 35px 40px;
+        margin-top: 15px;
+
+        @media (max-width: 560px) {
+            width: 80vw;  
+            height: auto;                                  
+        }
+    }
+
+    &__box_mail {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    &__subtitle {
+        font-family: "Roboto", Arial, Helvetica, sans-serif;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 21px;
+        color: variables.$white;
+        margin-bottom: 25px;
+    }
+
+    &__description {
+        @extend %paragraph-text-white;
+    }
+
+    &__link {
+        @extend .banner__link;
+        height: 35px;
+        margin-top: 20px;
+    }
+
+    &__mail {
+        width: 225px;
+        height: 35px;
+        border-radius: 30px;
+        border: transparent;
+        cursor: pointer;
+        padding: 0 10px;
+        margin-top: 25px;
+        transition: all 0.7s ease-in;
+
+        &:hover,
+        &:focus {
+            background-color: #ddd7d7;
+        }
+
+        @media (max-width: 560px) {
+            width: 175px;
+            height: 30px;
+        }
+    }
+}
