--- a/src/main.scss
+++ b/src/main.scss
@@ -10,3 +10,4 @@
 @use './scss/components/connect';
 @use './scss/components/contacts';
 @use './scss/components/footer';
+@use './scss/components/modal';
