--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -55,5 +55,9 @@ a {
 .container {
     max-width: 1170px;
     padding: 0 30px;
-    margin: auto;
+    margin: 40px auto 0;
+}
+
+.hidden {
+    display: none;
 }
