--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -2,19 +2,20 @@
 @use "../base/extends";
 
 .modal {
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(variables.$black, 0.9);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(variables.$black, 0.7);
     position: absolute;
     top: 0;
     left: 0;
     z-index: 1000;
+    transition: transform 0.2s linear;
 
     &__window {
         background-color: variables.$grey;
         border-radius: 5%;
-        width: 25%;
-        height: 30%;
+        width: 300px;
+        height: 280px;
         position: absolute;
         top: 40px;
         right: 100px;
