--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -20,6 +20,10 @@
         top: 40px;
         right: 100px;
         padding: 20px;
+
+        @media (max-width: 410px) {
+            right: 10px;
+        }
     }
 
     &__form {
