--- a/src/scss/components/_connect.scss
+++ b/src/scss/components/_connect.scss
@@ -24,11 +24,19 @@
         background-color: variables.$green;
         padding: 35px 40px;
         margin-top: 15px;
+        opacity: 0;
+        transform: translateY(-100px);
+        transition: opacity 0.4s ease-in-out, transform 0.4s linear;
 
         @media (max-width: 560px) {
             width: 80vw;
             height: auto;
         }
+    }
+
+    &__box_animated {
+        opacity: 1;
+        transform: translateY(0);
     }
 
     &__box_mail {
